objects/Shipment_Team_Member__c/Shipment_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Shipment Team Member</label>
    <nameField>
        <displayFormat>STM-{000000}</displayFormat>
        <label>Shipment Team Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment Team Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>