objects/Shipment_Team_Member__c/fields/Accounted_Month_KPI__c.field-meta.xml
<CustomField>
    <fullName>Accounted_Month_KPI__c</fullName>
    <formula>text( MONTH( F_TMS_S_O__r.clofor_com_cfs__SalesAccountedDate__c ) ) &amp;&quot;/&quot;&amp; text( YEAR(F_TMS_S_O__r.clofor_com_cfs__SalesAccountedDate__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounted Month KPI</label>
    <type>Text</type>
</CustomField>