objects/Shipment_Team_Member__c/fields/F_TMS_S_O__c.field-meta.xml
<CustomField>
    <fullName>F_TMS_S_O__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F/TMS S/O</label>
    <referenceTo>clofor_com_cfs__CustomObject1__c</referenceTo>
    <relationshipLabel>Shipment Team Members</relationshipLabel>
    <relationshipName>Shipment_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>