objects/Shipment_Team_Member__c/fields/Individual_KPI_ID__c.field-meta.xml
<CustomField>
    <fullName>Individual_KPI_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual KPI ID</label>
    <referenceTo>Individual_KPI__c</referenceTo>
    <relationshipLabel>Shipment Team Members</relationshipLabel>
    <relationshipName>Shipment_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>