objects/Shipment_Team_Member__c/fields/Kickback__c.field-meta.xml
<CustomField>
    <fullName>Kickback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kickback</label>
    <referenceTo>clofor_com_cfs__Kickback__c</referenceTo>
    <relationshipLabel>Shipment Team Members</relationshipLabel>
    <relationshipName>Shipment_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>