objects/Shipment_Team_Member__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>MONTH( F_TMS_S_O__r.clofor_com_cfs__SalesAccountedDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>