objects/Shipment_Team_Member__c/fields/Salesman__c.field-meta.xml
<CustomField>
    <fullName>Salesman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesman</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Shipment_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>