objects/Shipment_Team_Member__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>YEAR( F_TMS_S_O__r.clofor_com_cfs__SalesAccountedDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>